--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,8 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-forge_version=40.1.68
+forge_version=41.1.0
+jei_version=11.1.1.239
 
 semver=0.0.0
 
