fix: Typo in allowedIn method

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,4 @@ public net.minecraft.client.MouseHandler f_91520_ # mouseGrabbed
 public-f net.minecraft.world.entity.Entity m_142467_(Lnet/minecraft/world/entity/Entity$RemovalReason;)V # setRemoved
 public-f net.minecraft.client.renderer.GameRenderer f_109054_ # mainCamera
 public net.minecraft.network.protocol.game.ServerboundCustomPayloadPacket f_179586_ # MAX_PAYLOAD_SIZE
+public net.minecraft.world.item.Item m_220152_(Lnet/minecraft/world/item/CreativeModeTab;)Z # allowedIn
